--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "antd": "^5.22.1",
     "next": "15.0.1",
+    "pnpm": "^9.14.4",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
     "sass": "^1.80.4",
